                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.0

  *) http: Remove support for Request-Range header sent by Navigator 2-3 and
     MSIE 3. [Stefan Fritsch]

  *) core, http: Extend HttpProtocol with an option to enforce stricter HTTP
     conformance or to only log the found problems. [Stefan Fritsch]

  *) core: Correctly parse an IPv6 literal host specification in an absolute
     URL in the request line. [Stefan Fritsch]

  *) mod_ssl: add support for subjectAltName-based host name checking
     in proxy mode. PR 54030. [Kaspar Brand]

  *) mpm_event: Check that AsyncRequestWorkerFactor is not negative. PR 54254.
     [Jackie Zhang <jackie qq zhang gmail com>]

  *) httxt2dbm: Correct length computation for the 'value' stored in the DBM file
     PR 47650 [jon buckybox com]

  *) mod_ssl: Add support for OpenSSL configuration commands [Stephen Henson]

  *) EventOpt MPM

  *) mod_proxy_balancer: Improve output
     PR 52478 [Danijel <dt-ng rbfh de>]
  
  *) core: Add LogLevelOverride directive that allows to override the
     loglevel for clients from certain IPs. This also works for things
     like the SSL handshake where <If> LogLevel ... </If> is evaluated
     too late. [Stefan Fritsch]

  *) core: Add new directive Warning to issue warnings from a configuration
     file. Both Warning and Error now generate a timestamped log message.
     [Fabien Coelho] 

  *) mod_status: Print out list of times since a Vhost was last used.
     [Jim Jagielski]

  *) ap_expr: Add SERVER_PROTOCOL_VERSION, ..._MAJOR, and ..._MINOR
     variables. [Stefan Fritsch]

  *) core: New directive RegisterHttpMethod for registering non-standard
     HTTP methods. [Stefan Fritsch]

  *) core: New directive HttpProtocol which allows to disable HTTP/0.9
     support. [Stefan Fritsch]

  *) mod_allowhandlers: New module to forbid specific handlers for specific
     directories. [Stefan Fritsch]
