@@ -15,7 +15,6 @@
  */
 
 #include "apr_strings.h"
-#include "apr_md5.h"            /* for apr_password_validate */
 
 #include "ap_config.h"
 #include "ap_provider.h"
@@ -112,7 +111,7 @@ static authn_status check_password(request_rec *r, const char *user,
     }
     AUTHN_CACHE_STORE(r, user, NULL, file_password);
 
-    status = apr_password_validate(password, file_password);
+    status = ap_password_validate(r, user, password, file_password);
     if (status != APR_SUCCESS) {
         return AUTH_DENIED;
     }
